# pxbm

./: .gitignore  Cargo.toml  Makefile  README.md
include/: pxbm.h  util.h  xbmprint.h
include/netpbm/: netpbm.h  p1.h  p2.h  p3.h  p4.h  p5.h  p6.h  pgm.h  ppm.h
res/netpbm/: example_p1.pbm  example_p2.pgm  example_p3.ppm
res/xbm/: loink.xbm  test_5x4.xbm  test_9x4.xbm
res/xpm/: test1.xpm  test2.xpm  test3.xpm
src/: Makefile  bitmap.c  bitmap.h  color.rs  lib.rs  main.c  main.rs  parser.rs  pxbm.c  pxbm.h  util.c  util.rs  xbmprint.c
src/netpbm/: netpbm.c  p1.c  p2.c  p3.c  p4.c  p5.c  p6.c  pgm.c  ppm.c
src/parser/: mod.rs  xbm.rs  xpm.rs
src/parser/netpbm/: mod.rs  p1.rs  p2.rs  pbm.rs  pgm.rs  ppm.rs  util.rs
