[package]
name = "pxbm"
description = "Tool for printing bitmap images in ANSI-based shells"
version = "0.1.0"
edition = "2021"
authors = ["Karl Strålman <kallestralman@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/kjeller/pxbm"

[dependencies]
regex = "1.7.0"
clap = { version = "4.2.1", features = ["derive"] }
itertools = "0.10.5"
parse-display = "0.8.0"
